--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "black==25.1.0",
     "ipykernel==6.29.5",
     "isort==6.0.1",
+    "jupyter>=1.1.1",
     "loguru==0.7.3",
     "matplotlib==3.10.3",
     "numpy==2.3.1",
